# online-store

./: .gitignore  CMakeLists.txt  README.md
include/: admin.hpp  customer.hpp  database.hpp  manager.hpp  menu.hpp  order.hpp  payment.hpp  user.hpp
sql/: functions.sql  procedures.sql  sample-data.sql  table.sql  triggers.sql
src/: database.cpp  main.cpp  menu.cpp  simple_main.cpp
